--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-img-previewer",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "ChuEasy React Image Previewer",
   "main": "dist/index.js",
   "typing": "src/index.d.ts",
@@ -37,21 +37,19 @@
     "react-dom": ">=16.3.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.11",
-    "file-loader": "^6.2.0",
-    "gh-pages": "^3.2.0",
-    "html-webpack-plugin": "^3.2.0",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "style-loader": "^0.20.3",
-    "svg-url-loader": "^7.1.1",
-    "webpack": "^4.5.0",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.3"
+    "@babel/cli": "^7.17.6",
+    "@babel/core": "^7.17.5",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "babel-loader": "^8.2.3",
+    "css-loader": "^6.6.0",
+    "gh-pages": "^3.2.3",
+    "html-webpack-plugin": "^5.5.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.69.1",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
   }
 }
